--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.1.2",
+    "jest-environment-jsdom": "^29.7.0",
     "rollup": "^3.29.4",
     "rollup-plugin-dts": "^5.3.1",
     "ts-jest": "^29.1.1",
@@ -46,6 +46,7 @@
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "prepublishOnly": "npm run build && npm run test",
+    "publish:current": "node scripts/publish.js",
     "publish:patch": "node scripts/publish.js patch",
     "publish:minor": "node scripts/publish.js minor",
     "publish:major": "node scripts/publish.js major",
