--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "solar-waterfall": "^1.0.1",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
